Requests in swagger
